--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "expo": "~37.0.3",
+    "expo-permissions": "^8.1.0",
     "expo-splash-screen": "^0.2.0",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
